# Nmap Changelog ($Id$); -*-text-*-

o [GH#629][NSE] Added two new fingerprints to http-default-accounts
  (APC Management Card, older NetScreen ScreenOS) [Steve Benson, nnposter]

o [GH#716][NSE] Fix for oracle-tns-version which was sending an invalid TNS
  probe due to a string escaping mixup. [Alexandr Savca]

o [GH#671][NSE] New script cics-user-brute does brute-force enumeration of CICS
  usernames on IBM TN3270 services. [Soldier of Fortran]

o [GH#671][NSE] New script cics-info checks IBM TN3270 services for CICS transaction
  services and extracts useful information. [Soldier of Fortran]

o [GH#669][NSE] New script http-cookie-flags checks HTTP session cookies for
  HTTPOnly and Secure flags. [Steve Benson]

o [GH#694][NSE] ike-version now outputs information about supported attributes and
  unknown vendor ids. Also, a new fingerprint for FortiGate VPNs was submitted
  by Alexis La Goutte. [Daniel Miller]

o [GH#700] Enabled support for TLS SNI on the Windows platform. [nnposter]

o [GH#686] Script tls-ticketbleed checks for the Ticketbleed vulnerability
  (CVE-2016-9244) in F5 BIG-IP appliances. [Mak Kolybabi]

o [Ncat] Enable --ssl-ciphers to be used with Ncat in client mode, not only in
  server (listen) mode. [Daniel Miller]

o [GH#649] New service probe and match lines for the JMON and RSE services of
  IBM Explorer for z/OS. [Soldier of Fortran]

o Removed a duplicate service probe for Memcached added in 2011 (the original
  probe was added in 2008) and reported as duplicate in 2013 by Pavel Kankovsky.

o New service probe and match line for NoMachine NX Server remote desktop.
  [Justin Cacak]

o [Zenmap] Fixed a recurring installation problem on OS X/macOS where Zenmap
  was installed to /Applications/Applications/Zenmap.app instead of
  /Applications/Zenmap.app.

o [Zenmap][GH#639] Zenmap will no longer crash when no suitable temporary
  directory is found. Patches contributed by [Varunram Ganesh] and [Sai Sundhar]
